# lexxauto_msgs_serde_demo

./: Cargo.toml  README.md  bridge.json5  docker-compose.yml  pyproject.toml  ros.Dockerfile  router.json5
client/: main.py
service/: Cargo.toml  service.Dockerfile
service/src/: main.rs
src/: lib.rs
